# python-project-lib

./: .aiexclude  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.lambda  Makefile  README.md  check_compatibility.py  pyproject.toml  requirements.txt  sbom.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
charts/client/: README.md
client/: client.py  lambda_function.py  test_lambda_function.py
infrastructure/: README.md
src/my_app/: calculator.py
src/my_lib/: __init__.py  calc_cli.py  calculator.py
src/my_lib/config/: __init__.py  project_properties.py
src/my_lib/resources/: project_properties.json
test/: conftest.py
test/integration/: test_integration.py
test/unit/: test_calculator.py
