[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_lib"
version = "0.1.0"
description = "A production-ready Python project blueprint"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1", # Example runtime dependency
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.5.2",
    "build>=1.4.0",
    "twine>=6.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]

# --- Tool Configurations ---

[tool.setuptools.package-data]
# Syntax: "package_name" = ["pattern"]
"my_lib" = ["resources/*.json", "resources/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Fail build if coverage is below 80%
addopts = "--cov=my_lib --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=Error, F=Pyflakes, I=Isort (Import sorting)