[build-system]
requires = ["setuptools>=80.9.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "my-lib"
version = "0.1.0"
description = "A production-ready Python project blueprint"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5", # Example runtime dependency
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.5.2",
    "build>=1.4.0",
    "twine>=6.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
    "cyclonedx-bom>=7.2.1",
    "pip-audit>=2.10.0",
    "pdoc>=16.0.0",
    "bandit>=1.9.3",
    "pre-commit>=4.5.1",
    "pip-check-updates>=0.28.0",
    "aws-lambda-typing>=2.20.0" # required for client/*lambda* but not for the library
]

# --- Tool Configurations ---

[tool.setuptools.package-data]
# Syntax: "package_name" = ["pattern"]
"my_lib" = ["resources/*.json", "resources/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src", "client"]
testpaths = ["tests", "client"]
# Fail build if coverage is below 80%
addopts = "--cov=my_lib --cov=client --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "src/my_lib/config/project_properties.py",
    "client/client.py",
    "client/test_*.py",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests", "client"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=Error, F=Pyflakes, I=Isort (Import sorting)

[tool.bandit]
exclude_dirs = ["test", ".venv"]
targets = ["src"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]